Carrinho de compras pronto

--- a/src/Nutrivida/LojaBundle/Resources/views/Admin/Default/login.html.twig
+++ b/src/Nutrivida/LojaBundle/Resources/views/Admin/Default/login.html.twig
@@ -47,7 +47,7 @@
                         </div><!-- input-group -->
                         <div class="input-group mb15">
                             <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
-                            <input type="password" name="_password"  placeholder="Senha">
+                            <input type="password" name="_password" class="form-control"  placeholder="Senha">
                         </div><!-- input-group -->
                         
                         <div class="clearfix">
