--- a/src/Nutrivida/LojaBundle/Resources/views/Loja/layout.html.twig
+++ b/src/Nutrivida/LojaBundle/Resources/views/Loja/layout.html.twig
@@ -21,6 +21,7 @@
             function adicionarCarrinho(id) {
                 jQuery.get("{{ path("_loja_carrinho_adicionar") }}/"+id, function(msg) {
                    bootbox.alert(msg);
+                   location.href = "";
                 });
             }
             
