--- a/src/Nutrivida/LojaBundle/Resources/views/Loja/Empresa/pedidos.html.twig
+++ b/src/Nutrivida/LojaBundle/Resources/views/Loja/Empresa/pedidos.html.twig
@@ -17,7 +17,7 @@
                 <span>&gt;</span>
             </li>
             <li class="home">
-                    <span class="red"> &nbsp;Sobre a NutriVida&nbsp;</span>
+                    <span class="red"> &nbsp;Pedidos e Entregas&nbsp;</span>
             </li>
         </div>
     </ul>
@@ -26,10 +26,9 @@
             <div class="contact_top">
                 <div class="col-md-12 contact_left">
                     <div class="contact_grid contact_address">
-                        <h3>{{ empresa.nome }}</h3>
-                        <img src="{% path empresa.getImagens.get(0).media, 'big' %}" class="img-responsive" alt=""/>
+                        <h3>Pedidos e Entregas</h3>
                         <p>
-                            {{ empresa.descricao|raw }}
+                            Podemos já vislumbrar o modo pelo qual a consulta aos diversos militantes faz parte de um processo de gerenciamento das diversas correntes de pensamento. Não obstante, o novo modelo estrutural aqui preconizado estende o alcance e a importância do retorno esperado a longo prazo. Todavia, a revolução dos costumes obstaculiza a apreciação da importância dos procedimentos normalmente adotados. Pensando mais a longo prazo, o surgimento do comércio virtual afeta positivamente a correta previsão do remanejamento dos quadros funcionais. No mundo atual, o julgamento imparcial das eventualidades faz parte de um processo de gerenciamento do remanejamento dos quadros funcionais. 
                         </p>
                     </div>
                 </div>
