--- a/src/Nutrivida/LojaBundle/Resources/views/Loja/Empresa/privacidade.html.twig
+++ b/src/Nutrivida/LojaBundle/Resources/views/Loja/Empresa/privacidade.html.twig
@@ -17,7 +17,7 @@
                 <span>&gt;</span>
             </li>
             <li class="home">
-                    <span class="red"> &nbsp;Sobre a NutriVida&nbsp;</span>
+                    <span class="red"> &nbsp;Política de Privacidade&nbsp;</span>
             </li>
         </div>
     </ul>
@@ -26,10 +26,9 @@
             <div class="contact_top">
                 <div class="col-md-12 contact_left">
                     <div class="contact_grid contact_address">
-                        <h3>{{ empresa.nome }}</h3>
-                        <img src="{% path empresa.getImagens.get(0).media, 'big' %}" class="img-responsive" alt=""/>
+                        <h3>Políticas de Privacidade</h3>
                         <p>
-                            {{ empresa.descricao|raw }}
+                            Gostaria de enfatizar que a hegemonia do ambiente político facilita a criação das posturas dos órgãos dirigentes com relação às suas atribuições. Percebemos, cada vez mais, que a execução dos pontos do programa deve passar por modificações independentemente das novas proposições. Desta maneira, a percepção das dificuldades não pode mais se dissociar dos métodos utilizados na avaliação de resultados. Nunca é demais lembrar o peso e o significado destes problemas, uma vez que a constante divulgação das informações representa uma abertura para a melhoria do sistema de formação de quadros que corresponde às necessidades.                         
                         </p>
                     </div>
                 </div>
