--- a/src/Nutrivida/LojaBundle/Resources/views/Loja/Cliente/cadastro.html.twig
+++ b/src/Nutrivida/LojaBundle/Resources/views/Loja/Cliente/cadastro.html.twig
@@ -5,9 +5,11 @@
 {% block head %}
     <script src="{{ asset('bundles/nutrividaloja/admin/js/jquery.validate.min.js') }}"></script>
     <script src="{{ asset('bundles/nutrividaloja/admin/js/messages_ptbr.js') }}"></script>
+    <script src="{{ asset('bundles/nutrividaloja/admin/js/jquery.maskedinput.min.js') }}"></script>
     <script src="{{ asset('bundles/nutrividaloja/admin/js/validate/additional-methods.js') }}"></script>
     <script type="text/javascript">
         jQuery(document).ready(function(){
+            jQuery("#cliente_telefone").mask("(99) 9999-9999");
             jQuery("#form-cadastro").validate({
                 submitHandler: function(form) {
                     form.submit();
@@ -42,19 +44,24 @@
                         <div class="register-top-grid">
                             <h3>INFORMAÇÕES PESSOAIS</h3>
                             {{ form_row(form.nome) }}
+                            {{ form_row(form.telefone) }}
                             {{ form_row(form.email) }}
-                            {{ form_row(form.senha.first) }}
-                            {{ form_row(form.senha.second) }}
-                            {{ form_row(form._token) }}
-                            {{ form_errors(form) }}
-
                             <div class="clearfix"> </div>
                             <a class="news-letter" href="#">
                                 <label class="checkbox"><input type="checkbox" name="news" checked=""><i> </i>Receber ofertas de produtos Nutrivida</label>
                             </a>
-                            <input type="submit" value="salvar">
-
                         </div>
+                        <div class="register-bottom-grid">
+                            {{ form_row(form.senha.first) }}
+                            {{ form_row(form.senha.second) }}
+                            <div class="clearfix"> </div>
+                            <input type="submit" value="salvar">
+                        </div>
+                        <div class="clearfix"> </div>
+                        {{ form_row(form._token) }}
+                        {{ form_errors(form) }}
+
+
                     </form>
                     <div class="clearfix"> </div>
                 </div>
