--- a/src/Nutrivida/LojaBundle/Resources/views/Loja/footer.html.twig
+++ b/src/Nutrivida/LojaBundle/Resources/views/Loja/footer.html.twig
@@ -3,9 +3,9 @@
                 <div class="col-sm-2 grid-3">
                     <h3>A NutriVida</h3>
                     <ul class="footer_list">
-                        <li><a href="#">Quem Somos</a></li>
-                        <li><a href="#">Pedidos e Entregas</a></li>
-                        <li><a href="#">Política de Privacidade</a></li>
+                        <li><a href="{{ path('_loja_empresa') }}">Quem Somos</a></li>
+                        <li><a href="{{ path('_loja_pedidos') }}">Pedidos e Entregas</a></li>
+                        <li><a href="{{ path('_loja_privacidade') }}">Política de Privacidade</a></li>
                     </ul>
                 </div>
                 <div class="col-sm-2 grid-3">
