Ajustes das imagens

--- a/src/Nutrivida/LojaBundle/Resources/views/Loja/Produto/index.html.twig
+++ b/src/Nutrivida/LojaBundle/Resources/views/Loja/Produto/index.html.twig
@@ -6,8 +6,8 @@
     <script>
         jQuery(document).ready(function($){
             jQuery('#etalage').etalage({
-                thumb_image_width: 300,
-                thumb_image_height: 400,
+                thumb_image_width: 260,
+                thumb_image_height: 330,
                 source_image_width: 900,
                 source_image_height: 1200,
                 show_hint: true,
@@ -35,7 +35,7 @@
                     <span>&gt;</span>
                 </li>
                 <li class="home">
-                    {{ produto.getCategoria.nome }}&nbsp; 
+                    {{ produto.categoria.nome }}&nbsp; 
                     <span>&gt;</span>
                 </li>
                 <li class="home">
