--- a/src/Nutrivida/LojaBundle/Resources/views/Loja/Produto/index.html.twig
+++ b/src/Nutrivida/LojaBundle/Resources/views/Loja/Produto/index.html.twig
@@ -8,8 +8,8 @@
             jQuery('#etalage').etalage({
                 thumb_image_width: 260,
                 thumb_image_height: 330,
-                source_image_width: 900,
-                source_image_height: 1200,
+                source_image_width: 510,
+                source_image_height: 660,
                 show_hint: true,
                 click_callback: function(image_anchor, instance_id){
                         alert('Callback example:\nYou clicked on an image with the anchor: "'+image_anchor+'"\n(in Etalage instance: "'+instance_id+'")');
@@ -66,7 +66,8 @@
                             <li class="head"><h2>R$ {{ produto.valor|number_format(2, ',', '.') }}</h2></li>
                             <div class="clearfix"></div>
                         </ul>
-                        <p>{{ produto.descricao }}</p>
+                        <p>{{ produto.descricao|nl2br }}</p>
+                        <br/><br/>
                         <a href="javascript:adicionarCarrinho({{ produto.getId }})" class="btn1 btn2 btn-primary1"><span>adicionar</span><img src="{{ asset('bundles/nutrividaloja/loja/images/plus.png') }}" alt=""></a>
                     </div>
                     <div class="clearfix"></div>
